proyectoNumerosParinetes/ProyectoNumerosEnCrecimiento/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/snap/bluej/67/usr/lib/jvm/java-11-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/snap/bluej/67/usr/share/bluej/bluejcore.jar:/snap/bluej/67/usr/share/bluej/junit-4.11.jar:/snap/bluej/67/usr/share/bluej/hamcrest-core-1.3.jar:/snap/bluej/67/usr/share/bluej/lang-stride.jar:/snap/bluej/67/usr/share/java/javafx-base-11.jar:/snap/bluej/67/usr/share/java/javafx-controls-11.jar:/snap/bluej/67/usr/share/java/javafx-fxml-11.jar:/snap/bluej/67/usr/share/java/javafx-graphics-11.jar:/snap/bluej/67/usr/share/java/javafx-media-11.jar:/snap/bluej/67/usr/share/java/javafx-properties-11.jar:/snap/bluej/67/usr/share/java/javafx-swing-11.jar:/snap/bluej/67/usr/share/java/javafx-web-11.jar:/snap/bluej/67/usr/share/bluej/userlib/pi4j-core.jar:/snap/bluej/67/usr/share/bluej/userlib/pi4j-device.jar:/snap/bluej/67/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/snap/bluej/67/usr/share/bluej/userlib/pi4j-service.jar:/home/ronald/victor/Ejercicios Blue J/proyectoNumerosParinetes/ProyectoNumerosEnCrecimiento
-d
/home/ronald/victor/Ejercicios Blue J/proyectoNumerosParinetes/ProyectoNumerosEnCrecimiento/doc
-encoding
UTF-8
-charset
UTF-8
/home/ronald/victor/Ejercicios Blue J/proyectoNumerosParinetes/ProyectoNumerosEnCrecimiento/VerificacionDeNumeros.java
<---- end of javadoc command ---->
Loading source file /home/ronald/victor/Ejercicios Blue J/proyectoNumerosParinetes/ProyectoNumerosEnCrecimiento/VerificacionDeNumeros.java...
/home/ronald/victor/Ejercicios Blue J/proyectoNumerosParinetes/ProyectoNumerosEnCrecimiento/VerificacionDeNumeros.java:6: error: not a statement
       n
       ^
/home/ronald/victor/Ejercicios Blue J/proyectoNumerosParinetes/ProyectoNumerosEnCrecimiento/VerificacionDeNumeros.java:6: error: ';' expected
       n
        ^
/home/ronald/victor/Ejercicios Blue J/proyectoNumerosParinetes/ProyectoNumerosEnCrecimiento/VerificacionDeNumeros.java:11: error: class, interface, or enum expected
000
^
3 errors
